[package]
name = "beetle-embed"
authors = ["Floris Bruynooghe <flub@n0.computer>"]
description = "Embedable beetle library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
beetle-api.workspace = true
beetle-gateway.workspace = true
beetle-metrics.workspace = true
beetle-one.workspace = true
beetle-p2p.workspace = true
beetle-resolver.workspace = true
beetle-rpc-client.workspace = true
beetle-rpc-types.workspace = true
beetle-store.workspace = true
beetle-unixfs.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
tokio.workspace = true

[dev-dependencies]
testdir.workspace = true
tokio-test.workspace = true
