[package]
name = "beetle"
authors = ["Kasey Huizinga <klhuizinga@gmail.com>", "Martijn Faassen <faassen@startifact.com>"]
description = "Command line interface for interacting with beetle."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

exclude = [
  "tests/**",
  "fixtures/**",
]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
console.workspace = true
crossterm.workspace = true
futures.workspace = true
git-version.workspace = true
indicatif.workspace = true
beetle-api.workspace = true
beetle-localops.workspace = true
beetle-metrics.workspace = true
beetle-rpc-client.workspace = true
beetle-util.workspace = true
beetle-unixfs.workspace = true
relative-path = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
sysinfo.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
which.workspace = true
