[package]
name = "beetle-example-embed"
authors = ["team@n0.computer"]
description = "Example of using beetle-embed"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
beetle-api.workspace = true
beetle-embed.workspace = true
testdir.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
