[package]
name = "beetle-example-importer"
authors = ["team@n0.computer"]
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
bytesize.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
indicatif.workspace = true
beetle-car.workspace = true
beetle-unixfs.workspace = true
beetle-resolver.workspace = true
beetle-rpc-client.workspace = true
beetle-util.workspace = true
par-stream = { workspace = true, features = ["runtime-tokio"]}
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
