[package]
name = "flatfs-store"
version = "0.1.0"
edition = "2021"
authors = ["Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Implementation of FlatFS"

[dependencies]
backoff = "0.4.0"
cid = "0.8.4"
data-encoding = "2.3.2"
eyre = "0.6.6"
ignore = "0.4.18"
libipld = "0.13.1"
num_enum = "0.5.7"

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = []
